--- a/src/main/resources/view/itinerary/events/EventsPage.fxml
+++ b/src/main/resources/view/itinerary/events/EventsPage.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane style="-fx-background-color: #1d1d1d;" stylesheets="@../../DarkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
        <GridPane style="-fx-background-color: #50514F;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
            <columnConstraints>
@@ -52,7 +53,7 @@
            </children>
        </GridPane>
 
-       <GridPane gridLinesVisible="true" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="0.0">
+       <GridPane gridLinesVisible="true" stylesheets="@../../DarkTheme.css" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -73,10 +74,10 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label fx:id="nameLabel" alignment="CENTER" layoutX="10.0" layoutY="77.0" style="-fx-font-size: 20; -fx-font-weight: bold;" text="\$Name" />
-                  <Label fx:id="inventoryLabel" alignment="CENTER" text="\$Inventory" GridPane.rowIndex="2" />
-                  <Label fx:id="totalBudgetLabel" text="\$TotalBudget" GridPane.rowIndex="3" />
-                  <Label fx:id="bookingLabel" text="\$Booking" GridPane.rowIndex="4" />
+                  <Label fx:id="nameLabel" alignment="CENTER" layoutX="10.0" layoutY="77.0" style="-fx-text-fill: #FFFFFF;" text="\$Name" textAlignment="CENTER" textFill="WHITE" />
+                  <Label fx:id="inventoryLabel" alignment="CENTER" style="-fx-text-fill: #FFFFFF;" text="\$Inventory" textFill="WHITE" GridPane.rowIndex="2" />
+                  <Label fx:id="totalBudgetLabel" style="-fx-text-fill: #FFFFFF;" text="\$TotalBudget" textFill="WHITE" GridPane.rowIndex="3" />
+                  <Label fx:id="bookingLabel" style="-fx-text-fill: #FFFFFF;" text="\$Booking" textFill="WHITE" GridPane.rowIndex="4" />
                   <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
                      <image>
                         <Image url="@../../../../../../build/resources/main/images/dummytrip.jpeg" />
@@ -85,9 +86,9 @@
                </children>
             </GridPane>
              <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" hvalue="1.0" prefHeight="557.0" prefWidth="400.0" vvalue="1.0" AnchorPane.bottomAnchor="41.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0">
-                 <content>
-                     <VBox fx:id="eventCardContainer" minWidth="400.0" prefWidth="400.0" style="-fx-border-color: black;" />
-                 </content>
+               <content>
+                  <ListView fx:id="eventListView" prefHeight="200.0" prefWidth="200.0" />
+               </content>
              </ScrollPane>
          </children>
       </GridPane>
