--- a/src/main/resources/view/VisitListPanel.fxml
+++ b/src/main/resources/view/VisitListPanel.fxml
@@ -3,12 +3,18 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.Scene?>
+<?import java.net.URL?>
 <fx:root resizable="false" title="Visit List" type="javafx.stage.Stage" minWidth="450" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
     <scene>
         <Scene>
             <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
                 <ListView fx:id="visitListView" VBox.vgrow="ALWAYS" />
             </VBox>
+            <stylesheets>
+                <URL value="@DarkTheme.css" />
+                <URL value="@Extensions.css" />
+            </stylesheets>
         </Scene>
     </scene>
+
 </fx:root>
