--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -46,10 +47,12 @@
           </padding>
         </StackPane>
 
-        <StackPane VBox.vgrow="ALWAYS" fx:id="displayTabPanePlaceholder" styleClass="pane-with-border">
+        <StackPane VBox.vgrow="ALWAYS" styleClass="pane-with-border">
           <padding>
               <Insets top="5" right="10" bottom="5" left="10" />
           </padding>
+          <SplitPane fx:id="layoutPanePlaceholder">
+          </SplitPane>
         </StackPane>
 
         <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
