--- a/src/main/resources/view/DetailsTabPane.fxml
+++ b/src/main/resources/view/DetailsTabPane.fxml
@@ -2,5 +2,5 @@
 
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="detailPanePlaceholder" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="detailsTabPanePlaceholder" xmlns:fx="http://javafx.com/fxml/1">
 </AnchorPane>
